added space to bottom of card so moon is visible

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -121,6 +121,7 @@ textarea {
 
       &.full {
         box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
+        margin-bottom: 6em;
 
         .priority {
           min-height: 2.325em;
