improved shitpost position & removed extra logging

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1111,7 +1111,7 @@ textarea {
     #shitposts {
       .actionCircle {
         left: 0.5em;
-        bottom: 5em;
+        top: calc(45vh + 19em);
       }
     }
 
