improved attachment appearance (hid inaccurate error msg)

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1932,6 +1932,11 @@ textarea {
         top: -0.275em;
       }
     }
+
+    // apparently inaccurate error messages above attachments
+    .pg-viewer-wrapper {
+      display: none;
+    }
   }
 }
 
