--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -975,9 +975,14 @@ textarea {
         max-width: 18em;
         margin: 1em;
       }
+    }
 
-      .agendaTail .stack {
+    // openable sections in a popup
+    #calendar,
+    #proposals {
+      .tail .stack {
         margin-top: 1em;
+        margin-bottom: 0.5em;
 
         .action.open {
           font-size: 1.5em;
@@ -986,10 +991,6 @@ textarea {
           background: none;
           border: none;
           text-shadow: none;
-
-          // &:hover {
-          //   text-decoration: none;
-          // }
         }
       }
     }
@@ -1622,7 +1623,8 @@ textarea {
     }
 
     // server name display/editor, on options page
-    .serverName {
+    .serverName,
+    .serverQuorum {
       display: inline-block;
     }
 
