--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -465,6 +465,11 @@ textarea {
           max-height: 100%;
         }
 
+        video {
+          max-width: 100%;
+          max-height: 100%;
+        }
+
         .mission {
           .missionTitle {
             height: 1.5em;
