--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -86,7 +86,7 @@ textarea {
 
       &.full {
         box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
-        margin-bottom: 6em;
+        margin-bottom: 8.5em;
 
         .priority {
           min-height: 2.325em;
@@ -661,6 +661,7 @@ textarea {
       transform: translateX(-50%);
       width: min-content;
       z-index: 1; // So grid resize button show above of main stack drop zone.
+      margin-bottom: 2.5em;
 
       &.padbottom {
         margin-bottom: 2em;
@@ -1260,6 +1261,11 @@ textarea {
         width: 39em;
       }
     }
+
+    // // stack inside the main card
+    // .card.full .gridContainer + .stack {
+    //   margin-top: 2.5em;
+    // }
 
     // drop shadow on cards in the context stack
     .context.stack ~ .card {
@@ -2113,6 +2119,19 @@ textarea {
 
       img {
         max-width: 100%;
+      }
+    }
+
+    // chatroom-style main stack of subTasks under the grid in each card
+    .chatStack {
+      overflow-y: auto;
+      max-height: 17em;
+      width: 100%;
+
+      & + .cardComposer textarea.zone {
+        width: 100%;
+        height: 4em;
+        margin: 0;
       }
     }
   }
