fixed invite button formatting on members list

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -948,7 +948,7 @@ textarea {
         position: relative;
         // padding-bottom: 2.5em;
 
-        & > .action {
+        & > div > .action {
           position: absolute;
           right: 0;
           bottom: 0;
