button must be on left

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2294,7 +2294,7 @@ textarea {
       button {
         position: absolute;
         top: -3.15em;
-        right: 0;
+        left: 0;
       }
     }
   }
