--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -765,9 +765,9 @@ textarea {
           }
 
           .remove {
-            margin-top: 0;
+            position: absolute;
             left: 0;
-            top: -1.5em;
+            bottom: 0;
           }
         }
       }
