# of people in chatroom should update every 15 seconds now

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2121,6 +2121,7 @@ textarea {
     // the name of the attached file, after the attachment
     .attachment + a {
       text-align: center;
+      display: block;
     }
 
     // button to open the main card create box
