renamed mission to squad. prevent duplicate card creation in server-side validation.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2201,8 +2201,7 @@ textarea {
     }
 
     // jitsi watermark. iirc their website says they don't mind you hiding this if you're not for-profit.
-    .watermark,
-    .leftwatermark {
+    .watermark.leftwatermark {
       display: none;
     }
 
