--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1983,6 +1983,40 @@ textarea {
       }
     }
 
+    // Start Tour button at top left of screen before you've take the tour once
+    #hud > .tour {
+      position: absolute;
+      bottom: 0.25em;
+      left: 5em;
+      animation: rainbow 4s linear 0s infinite;
+      border: 0.25em solid;
+      font-size: 1.25em;
+      font-weight: bold;
+    }
+
+    @keyframes rainbow {
+      from {
+        color: #6666ff;
+        border-color: #6666ff;
+      }
+      10% {
+        color: #0099ff;
+        border-color: #0099ff;
+      }
+      50% {
+        color: #00ff00;
+        border-color: #00ff00;
+      }
+      75% {
+        color: #ff3399;
+        border-color: #ff3399;
+      }
+      100% {
+        color: #6666ff;
+        border-color: #6666ff;
+      }
+    }
+
     // Tour popups
     .shepherd-element {
       background-color: rgba(0, 0, 0, 0.85);
