added sent gifts tab. fixed spacing on compose button again. fixed broken card create validator

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -940,8 +940,8 @@ textarea {
 
         & > .action {
           position: absolute;
-          right: 0;
-          bottom: 0;
+          right: 1em;
+          bottom: 1em;
         }
       }
 
