--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1152,6 +1152,7 @@ textarea {
         transform: translateX(-50%);
         margin-top: 4em;
         width: max-content;
+        font-weight: bold;
 
         & > .drawSource {
           img {
